// Command to generate grpc  
// $ protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative .\auth.proto

syntax = "proto3";

option go_package = "github.com/pseudoincorrect/bariot/auth/rpc/auth";

package auth;

service Auth {
  rpc GetAdminToken(GetAdminTokenRequest) returns (GetAdminTokenResponse) {}
  // rpc AuthorizeUser(AuthoriseUserRequest) returns (AuthoriseUserResponse) {}
  // rpc AuthorizeThing(AuthoriseUserRequest) returns (AuthoriseThingResponse) {}
  // rpc createTokenUser(CreateTokenUserRequest) returns (CreateTokenUserResponse) {}
}

message GetAdminTokenRequest {
  string password = 1;

}

message GetAdminTokenResponse{
  string jwt = 1;
}

// message AuthorizeUserRequest{
//   string jwt = 1;
// }

// message AuthorizeUserResponse {}

// message AuthorizeUserRequest {
//   string jwt = 1;
// }

// message AuthorizeThingResponse {}

// message CreateTokenUserRequest {
//   string jwt = 1;
//   string userPassword = 2;
// }

// message CreateTokenUserResponse {}
